# game-of-life

./: Cargo.toml  README.md  serve.sh
.github/workflows/: deploy.yml
src/: lib.rs  patterns.rs  shaders.rs  texture.rs
web/: index.html  script.js  style.css
