[package]
name = "game-of-life"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ['Document', 'Window', 'HtmlCanvasElement', 'WebGlRenderingContext', 'WebGl2RenderingContext', 'WebGlProgram', 'WebGlShader', 'WebGlBuffer', 'WebGlUniformLocation'] }
